[project]
name = "audio-transcriber"
authors = [{ name = "Ivo Robotnic", email = "theivorobotnic@gmail.com" }]
version = "0.1.0"
requires-python = "~=3.11"
dependencies = [
    "whisperx==3.8.6",
    "faster-whisper==1.2.1",
    "pytorch-rocm-gtt==0.1.4",
    "ffmpeg-python==0.2.0",
    "ffmpeg-studio==0.1.2",
    "ass==1.0.3",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[project.scripts]
ftf-audio-transcriber = "audio_transcriber.__main__:main"
